@@ -3,6 +3,7 @@
             Bangle.js 2: When wake on touch is enabled, use a single tap on the front of the device for wakeup
             Bangle.js: Display 'checking storage' message on first boot to alert users to slight delay
             Bangle.js: Tweaked step count algorithm (low pass filter, 4 steps in 90s)
+            Graphics: asBMP/asURL/dump now support more bit depths
 
      2v10 : Bangle.js: Improved HRM calculations - swapped autocorrelation for bandpass filter
             Bangle.js: Significantly improved step counting algorithm using bandpass filter (fix #1846)
